@@ -26,6 +26,7 @@ import io.axoniq.axonserver.grpc.ProcessingKey;
 import io.axoniq.axonserver.grpc.query.QueryRequest;
 import io.axoniq.axonserver.grpc.query.QueryResponse;
 import org.axonframework.axonserver.connector.AxonServerConfiguration;
+import org.axonframework.messaging.QualifiedName;
 import org.axonframework.messaging.responsetypes.ResponseTypes;
 import org.axonframework.queryhandling.DefaultQueryBusSpanFactory;
 import org.axonframework.queryhandling.GenericQueryMessage;
@@ -56,6 +57,7 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import static org.axonframework.messaging.responsetypes.ResponseTypes.*;
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
@@ -91,19 +93,19 @@ class QueryProcessingTaskIntegrationTest {
                                                                 .build();
         querySerializer = new QuerySerializer(serializer, serializer, config);
         queryHandlingComponent1 = new QueryHandlingComponent1();
-        //noinspection resource
         new AnnotationQueryHandlerAdapter<>(queryHandlingComponent1).subscribe(localSegment);
-        //noinspection resource
         new AnnotationQueryHandlerAdapter<>(new QueryHandlingComponent2()).subscribe(localSegment);
     }
 
     @Test
     void directQueryWhenRequesterDoesntSupportStreaming() {
         QueryMessage<FluxQuery, Publisher<String>> queryMessage =
-                new GenericQueryMessage<>(new FluxQuery(1000), ResponseTypes.publisherOf(String.class));
-
+                new GenericQueryMessage<>(new QualifiedName("test", "query", "0.0.1"),
+                                          new FluxQuery(1000),
+                                          publisherOf(String.class));
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1);
+
         QueryProcessingTask task = new QueryProcessingTask(localSegment,
                                                            request,
                                                            responseHandler,
@@ -114,17 +116,19 @@ class QueryProcessingTaskIntegrationTest {
         task.run();
         task.request(10);
         assertEquals(1, responseHandler.sent().size());
-        assertOrder(responseHandler.sent().get(0));
+        assertOrder(responseHandler.sent().getFirst());
         assertTrue(responseHandler.completed());
     }
 
     @Test
     void queryProcessingTaskIsTraced() {
         QueryMessage<FluxQuery, Publisher<String>> queryMessage =
-                new GenericQueryMessage<>(new FluxQuery(1000), ResponseTypes.publisherOf(String.class));
-
+                new GenericQueryMessage<>(new QualifiedName("test", "query", "0.0.1"),
+                                          new FluxQuery(1000),
+                                          publisherOf(String.class));
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1);
+
         QueryProcessingTask task = new QueryProcessingTask(localSegment,
                                                            request,
                                                            responseHandler,
@@ -139,10 +143,12 @@ class QueryProcessingTaskIntegrationTest {
     @Test
     void directQueryWhenRequesterDoesntSupportStreamingAndFlowControlMessagesComesBeforeQueryExecution() {
         QueryMessage<FluxQuery, Publisher<String>> queryMessage =
-                new GenericQueryMessage<>(new FluxQuery(1000), ResponseTypes.publisherOf(String.class));
-
+                new GenericQueryMessage<>(new QualifiedName("test", "query", "0.0.1"),
+                                          new FluxQuery(1000),
+                                          publisherOf(String.class));
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1);
+
         QueryProcessingTask task = new QueryProcessingTask(localSegment,
                                                            request,
                                                            responseHandler,
@@ -153,17 +159,19 @@ class QueryProcessingTaskIntegrationTest {
         task.request(10);
         task.run();
         assertEquals(1, responseHandler.sent().size());
-        assertOrder(responseHandler.sent().get(0));
+        assertOrder(responseHandler.sent().getFirst());
         assertTrue(responseHandler.completed());
     }
 
     @Test
     void directQueryWhenRequesterDoesntSupportStreamingAndCancelMessagesComesBeforeQueryExecution() {
         QueryMessage<FluxQuery, Publisher<String>> queryMessage =
-                new GenericQueryMessage<>(new FluxQuery(1000), ResponseTypes.publisherOf(String.class));
-
+                new GenericQueryMessage<>(new QualifiedName("test", "query", "0.0.1"),
+                                          new FluxQuery(1000),
+                                          publisherOf(String.class));
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1);
+
         QueryProcessingTask task = new QueryProcessingTask(localSegment,
                                                            request,
                                                            responseHandler,
@@ -180,13 +188,15 @@ class QueryProcessingTaskIntegrationTest {
     @Test
     void streamingQuery() {
         QueryMessage<FluxQuery, Publisher<String>> queryMessage =
-                new GenericQueryMessage<>(new FluxQuery(1000), ResponseTypes.publisherOf(String.class));
-
+                new GenericQueryMessage<>(new QualifiedName("test", "query", "0.0.1"),
+                                          new FluxQuery(1000),
+                                          publisherOf(String.class));
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1, true)
                                .toBuilder()
                                .addProcessingInstructions(asSupportsStreaming())
                                .build();
+
         QueryProcessingTask task = new QueryProcessingTask(localSegment,
                                                            request,
                                                            responseHandler,
@@ -211,14 +221,15 @@ class QueryProcessingTaskIntegrationTest {
 
     @Test
     void streamingAList() {
-        QueryMessage<ListQuery, List<String>> queryMessage =
-                new GenericQueryMessage<>(new ListQuery(1000), ResponseTypes.multipleInstancesOf(String.class));
-
+        QueryMessage<ListQuery, List<String>> queryMessage = new GenericQueryMessage<>(
+                new QualifiedName("test", "query", "0.0.1"), new ListQuery(1000), multipleInstancesOf(String.class)
+        );
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1, true)
                                .toBuilder()
                                .addProcessingInstructions(asSupportsStreaming())
                                .build();
+
         QueryProcessingTask task = new QueryProcessingTask(localSegment,
                                                            request,
                                                            responseHandler,
@@ -243,14 +254,15 @@ class QueryProcessingTaskIntegrationTest {
 
     @Test
     void streamingAListWhenReactorIsNotOnClasspath() {
-        QueryMessage<ListQuery, List<String>> queryMessage =
-                new GenericQueryMessage<>(new ListQuery(1000), ResponseTypes.multipleInstancesOf(String.class));
-
+        QueryMessage<ListQuery, List<String>> queryMessage = new GenericQueryMessage<>(
+                new QualifiedName("test", "query", "0.0.1"), new ListQuery(1000), multipleInstancesOf(String.class)
+        );
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1, true)
                                .toBuilder()
                                .addProcessingInstructions(asSupportsStreaming())
                                .build();
+
         QueryProcessingTask task = new QueryProcessingTask(localSegment,
                                                            request,
                                                            responseHandler,
@@ -275,14 +287,15 @@ class QueryProcessingTaskIntegrationTest {
 
     @Test
     void streamingAListWhenReactorIsNotOnClasspathWithConcurrentRequests() throws InterruptedException {
-        QueryMessage<ListQuery, List<String>> queryMessage =
-                new GenericQueryMessage<>(new ListQuery(1000), ResponseTypes.multipleInstancesOf(String.class));
-
+        QueryMessage<ListQuery, List<String>> queryMessage = new GenericQueryMessage<>(
+                new QualifiedName("test", "query", "0.0.1"), new ListQuery(1000), multipleInstancesOf(String.class)
+        );
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1, true)
                                .toBuilder()
                                .addProcessingInstructions(asSupportsStreaming())
                                .build();
+
         QueryProcessingTask task = new QueryProcessingTask(localSegment,
                                                            request,
                                                            responseHandler,
@@ -325,13 +338,15 @@ class QueryProcessingTaskIntegrationTest {
     @Test
     void streamingQueryWithConcurrentRequests() throws InterruptedException {
         QueryMessage<FluxQuery, Publisher<String>> queryMessage =
-                new GenericQueryMessage<>(new FluxQuery(1000), ResponseTypes.publisherOf(String.class));
-
+                new GenericQueryMessage<>(new QualifiedName("test", "query", "0.0.1"),
+                                          new FluxQuery(1000),
+                                          publisherOf(String.class));
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1, true)
                                .toBuilder()
                                .addProcessingInstructions(asSupportsStreaming())
                                .build();
+
         QueryProcessingTask task = new QueryProcessingTask(localSegment,
                                                            request,
                                                            responseHandler,
@@ -374,13 +389,15 @@ class QueryProcessingTaskIntegrationTest {
     @Test
     void streamingStringViaDirectQuery() {
         QueryMessage<InstanceQuery, String> queryMessage =
-                new GenericQueryMessage<>(new InstanceQuery(), ResponseTypes.instanceOf(String.class));
-
+                new GenericQueryMessage<>(new QualifiedName("test", "query", "0.0.1"),
+                                          new InstanceQuery(),
+                                          instanceOf(String.class));
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1)
                                .toBuilder()
                                .addProcessingInstructions(asSupportsStreaming())
                                .build();
+
         QueryProcessingTask task = new QueryProcessingTask(localSegment,
                                                            request,
                                                            responseHandler,
@@ -391,8 +408,8 @@ class QueryProcessingTaskIntegrationTest {
         task.request(10);
         task.run();
         assertEquals(1, responseHandler.sent().size());
-        String payload = querySerializer.deserializeResponse(responseHandler.sent().get(0),
-                                                             ResponseTypes.instanceOf(String.class))
+        String payload = querySerializer.deserializeResponse(responseHandler.sent().getFirst(),
+                                                             instanceOf(String.class))
                                         .getPayload();
         assertEquals("value", payload);
         assertTrue(responseHandler.completed());
@@ -400,9 +417,11 @@ class QueryProcessingTaskIntegrationTest {
 
     @Test
     void multipleInstanceQueryShouldInvokeFlux() {
-        QueryMessage<MultipleInstanceQuery, Publisher<String>> queryMessage =
-                new GenericQueryMessage<>(new MultipleInstanceQuery(1000), ResponseTypes.publisherOf(String.class));
-
+        QueryMessage<MultipleInstanceQuery, Publisher<String>> queryMessage = new GenericQueryMessage<>(
+                new QualifiedName("test", "query", "0.0.1"),
+                new MultipleInstanceQuery(1000),
+                publisherOf(String.class)
+        );
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1, true)
                                .toBuilder()
@@ -421,8 +440,7 @@ class QueryProcessingTaskIntegrationTest {
         assertEquals(1000, responseHandler.sent().size());
         assertTrue(responseHandler.completed());
         String firstPayload =
-                querySerializer.deserializeResponse(responseHandler.sent().get(0),
-                                                    ResponseTypes.instanceOf(String.class))
+                querySerializer.deserializeResponse(responseHandler.sent().getFirst(), instanceOf(String.class))
                                .getPayload();
         assertTrue(firstPayload.startsWith("flux-"));
     }
@@ -430,8 +448,9 @@ class QueryProcessingTaskIntegrationTest {
     @Test
     void cancellationOfStreamingFluxQuery() {
         QueryMessage<FluxQuery, Publisher<String>> queryMessage =
-                new GenericQueryMessage<>(new FluxQuery(1000), ResponseTypes.publisherOf(String.class));
-
+                new GenericQueryMessage<>(new QualifiedName("test", "query", "0.0.1"),
+                                          new FluxQuery(1000),
+                                          publisherOf(String.class));
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1, true)
                                .toBuilder()
@@ -459,8 +478,9 @@ class QueryProcessingTaskIntegrationTest {
     @Test
     void streamingFluxQueryWhenCancelMessageComesFirst() {
         QueryMessage<FluxQuery, Publisher<String>> queryMessage =
-                new GenericQueryMessage<>(new FluxQuery(1000), ResponseTypes.publisherOf(String.class));
-
+                new GenericQueryMessage<>(new QualifiedName("test", "query", "0.0.1"),
+                                          new FluxQuery(1000),
+                                          publisherOf(String.class));
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1, true)
                                .toBuilder()
@@ -481,9 +501,9 @@ class QueryProcessingTaskIntegrationTest {
 
     @Test
     void cancellationOfStreamingListQuery() {
-        QueryMessage<ListQuery, List<String>> queryMessage =
-                new GenericQueryMessage<>(new ListQuery(1000), ResponseTypes.multipleInstancesOf(String.class));
-
+        QueryMessage<ListQuery, List<String>> queryMessage = new GenericQueryMessage<>(
+                new QualifiedName("test", "query", "0.0.1"), new ListQuery(1000), multipleInstancesOf(String.class)
+        );
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1, true)
                                .toBuilder()
@@ -509,9 +529,9 @@ class QueryProcessingTaskIntegrationTest {
 
     @Test
     void streamingListQueryWhenCancelMessageComesFirst() {
-        QueryMessage<ListQuery, List<String>> queryMessage =
-                new GenericQueryMessage<>(new ListQuery(1000), ResponseTypes.multipleInstancesOf(String.class));
-
+        QueryMessage<ListQuery, List<String>> queryMessage = new GenericQueryMessage<>(
+                new QualifiedName("test", "query", "0.0.1"), new ListQuery(1000), multipleInstancesOf(String.class)
+        );
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1, true)
                                .toBuilder()
@@ -532,9 +552,11 @@ class QueryProcessingTaskIntegrationTest {
 
     @Test
     void fluxEmittingErrorAfterAWhile() {
-        QueryMessage<ErrorAfterAWhileFluxQuery, Publisher<String>> queryMessage =
-                new GenericQueryMessage<>(new ErrorAfterAWhileFluxQuery(), ResponseTypes.publisherOf(String.class));
-
+        QueryMessage<ErrorAfterAWhileFluxQuery, Publisher<String>> queryMessage = new GenericQueryMessage<>(
+                new QualifiedName("test", "query", "0.0.1"),
+                new ErrorAfterAWhileFluxQuery(),
+                publisherOf(String.class)
+        );
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1, true)
                                .toBuilder()
@@ -560,8 +582,9 @@ class QueryProcessingTaskIntegrationTest {
     @Test
     void fluxEmittingErrorRightAway() {
         QueryMessage<ErrorFluxQuery, Publisher<String>> queryMessage =
-                new GenericQueryMessage<>(new ErrorFluxQuery(), ResponseTypes.publisherOf(String.class));
-
+                new GenericQueryMessage<>(new QualifiedName("test", "query", "0.0.1"),
+                                          new ErrorFluxQuery(),
+                                          publisherOf(String.class));
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1)
                                .toBuilder()
@@ -579,15 +602,17 @@ class QueryProcessingTaskIntegrationTest {
         task.request(100);
         assertEquals(1, responseHandler.sent().size());
         assertTrue(responseHandler.completed());
-        QueryResponse queryResponse = responseHandler.sent().get(0);
+        QueryResponse queryResponse = responseHandler.sent().getFirst();
         assertTrue(queryResponse.hasErrorMessage());
     }
 
     @Test
     void fluxHandlerThrowingAnException() {
-        QueryMessage<ThrowingExceptionFluxQuery, Publisher<String>> queryMessage =
-                new GenericQueryMessage<>(new ThrowingExceptionFluxQuery(), ResponseTypes.publisherOf(String.class));
-
+        QueryMessage<ThrowingExceptionFluxQuery, Publisher<String>> queryMessage = new GenericQueryMessage<>(
+                new QualifiedName("test", "query", "0.0.1"),
+                new ThrowingExceptionFluxQuery(),
+                publisherOf(String.class)
+        );
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1)
                                .toBuilder()
@@ -605,16 +630,17 @@ class QueryProcessingTaskIntegrationTest {
         task.request(100);
         assertEquals(1, responseHandler.sent().size());
         assertTrue(responseHandler.completed());
-        QueryResponse queryResponse = responseHandler.sent().get(0);
+        QueryResponse queryResponse = responseHandler.sent().getFirst();
         assertTrue(queryResponse.hasErrorMessage());
     }
 
     @Test
     void listHandlerThrowingAnException() {
-        QueryMessage<ThrowingExceptionListQuery, List<String>> queryMessage =
-                new GenericQueryMessage<>(new ThrowingExceptionListQuery(),
-                                          ResponseTypes.multipleInstancesOf(String.class));
-
+        QueryMessage<ThrowingExceptionListQuery, List<String>> queryMessage = new GenericQueryMessage<>(
+                new QualifiedName("test", "query", "0.0.1"),
+                new ThrowingExceptionListQuery(),
+                multipleInstancesOf(String.class)
+        );
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1)
                                .toBuilder()
@@ -632,15 +658,16 @@ class QueryProcessingTaskIntegrationTest {
         task.request(100);
         assertEquals(1, responseHandler.sent().size());
         assertTrue(responseHandler.completed());
-        QueryResponse queryResponse = responseHandler.sent().get(0);
+        QueryResponse queryResponse = responseHandler.sent().getFirst();
         assertTrue(queryResponse.hasErrorMessage());
     }
 
     @Test
     void fluxStreamingQueryWhenRequestingTooMany() {
         QueryMessage<FluxQuery, Publisher<String>> queryMessage =
-                new GenericQueryMessage<>(new FluxQuery(1000), ResponseTypes.publisherOf(String.class));
-
+                new GenericQueryMessage<>(new QualifiedName("test", "query", "0.0.1"),
+                                          new FluxQuery(1000),
+                                          publisherOf(String.class));
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1, true)
                                .toBuilder()
@@ -664,9 +691,9 @@ class QueryProcessingTaskIntegrationTest {
 
     @Test
     void listStreamingQueryWhenRequestingTooMany() {
-        QueryMessage<ListQuery, List<String>> queryMessage =
-                new GenericQueryMessage<>(new ListQuery(1000), ResponseTypes.multipleInstancesOf(String.class));
-
+        QueryMessage<ListQuery, List<String>> queryMessage = new GenericQueryMessage<>(
+                new QualifiedName("test", "query", "0.0.1"), new ListQuery(1000), multipleInstancesOf(String.class)
+        );
         QueryRequest request =
                 querySerializer.serializeRequest(queryMessage, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1, true)
                                .toBuilder()
@@ -690,8 +717,11 @@ class QueryProcessingTaskIntegrationTest {
 
     @Test
     void responsePendingReturnsTrueForUncompletedTask() {
-        QueryMessage<FluxQuery, Publisher<String>> testQuery =
-                new GenericQueryMessage<>(new FluxQuery(1000), ResponseTypes.publisherOf(String.class));
+        QueryMessage<FluxQuery, Publisher<String>> testQuery = new GenericQueryMessage<>(
+                new QualifiedName("test", "query", "0.0.1"),
+                new FluxQuery(1000),
+                ResponseTypes.publisherOf(String.class)
+        );
         QueryRequest testRequest = querySerializer.serializeRequest(testQuery, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1);
         QueryProcessingTask testSubject = new QueryProcessingTask(localSegment,
                                                                   testRequest,
@@ -705,8 +735,11 @@ class QueryProcessingTaskIntegrationTest {
 
     @Test
     void responsePendingReturnsFalseForCompletedTask() {
-        QueryMessage<FluxQuery, Publisher<String>> testQuery =
-                new GenericQueryMessage<>(new FluxQuery(1), ResponseTypes.publisherOf(String.class));
+        QueryMessage<FluxQuery, Publisher<String>> testQuery = new GenericQueryMessage<>(
+                new QualifiedName("test", "query", "0.0.1"),
+                new FluxQuery(1),
+                ResponseTypes.publisherOf(String.class)
+        );
         QueryRequest testRequest = querySerializer.serializeRequest(testQuery, DIRECT_QUERY_NUMBER_OF_RESULTS, 1000, 1);
         QueryProcessingTask testSubject = new QueryProcessingTask(localSegment,
                                                                   testRequest,
@@ -719,7 +752,7 @@ class QueryProcessingTaskIntegrationTest {
         testSubject.run();
         testSubject.request(1);
         assertEquals(1, responseHandler.sent().size());
-        assertOrder(responseHandler.sent().get(0));
+        assertOrder(responseHandler.sent().getFirst());
         assertTrue(responseHandler.completed());
         assertFalse(testSubject.resultPending());
     }
@@ -727,14 +760,13 @@ class QueryProcessingTaskIntegrationTest {
     private void assertOrder(List<QueryResponse> responses) {
         for (int i = 0; i < responses.size(); i++) {
             QueryResponseMessage<String> responseMessage =
-                    querySerializer.deserializeResponse(responses.get(i), ResponseTypes.instanceOf(String.class));
+                    querySerializer.deserializeResponse(responses.get(i), instanceOf(String.class));
             assertEquals(i, Integer.parseInt(responseMessage.getPayload()));
         }
     }
 
     private void assertOrder(QueryResponse response) {
-        List<String> responses = querySerializer.deserializeResponse(response,
-                                                                     ResponseTypes.multipleInstancesOf(String.class))
+        List<String> responses = querySerializer.deserializeResponse(response, multipleInstancesOf(String.class))
                                                 .getPayload();
         for (int i = 0; i < responses.size(); i++) {
             assertEquals(i, Integer.parseInt(responses.get(i)));
