@@ -54,6 +54,7 @@ import org.axonframework.eventsourcing.eventstore.inmemory.InMemoryEventStorageE
 import org.axonframework.lifecycle.LifecycleHandlerInvocationException;
 import org.axonframework.messaging.InterceptorChain;
 import org.axonframework.messaging.MessageHandlerInterceptor;
+import org.axonframework.messaging.QualifiedName;
 import org.axonframework.messaging.StreamableMessageSource;
 import org.axonframework.messaging.deadletter.Decisions;
 import org.axonframework.messaging.deadletter.EnqueuePolicy;
@@ -231,14 +232,14 @@ class EventProcessingModuleTest {
 
         assertEquals(3, configuration.eventProcessingConfiguration().eventProcessors().size());
         assertTrue(processors.get("java.util.concurrent2").getEventHandlers().contains("concurrent"));
-        assertTrue(processors.get("java.util.concurrent2").getHandlerInterceptors().iterator()
-                             .next() instanceof CorrelationDataInterceptor);
+        assertInstanceOf(CorrelationDataInterceptor.class,
+                         processors.get("java.util.concurrent2").getHandlerInterceptors().getFirst());
         assertTrue(processors.get("java.util.concurrent").getEventHandlers().contains(map));
-        assertTrue(processors.get("java.util.concurrent").getHandlerInterceptors().iterator()
-                             .next() instanceof CorrelationDataInterceptor);
+        assertInstanceOf(CorrelationDataInterceptor.class,
+                         processors.get("java.util.concurrent").getHandlerInterceptors().getFirst());
         assertTrue(processors.get("java.lang").getEventHandlers().contains(""));
-        assertTrue(processors.get("java.lang").getHandlerInterceptors().iterator()
-                             .next() instanceof CorrelationDataInterceptor);
+        assertInstanceOf(CorrelationDataInterceptor.class,
+                         processors.get("java.lang").getHandlerInterceptors().getFirst());
     }
 
     @Test
@@ -342,9 +343,9 @@ class EventProcessingModuleTest {
                 getFieldValue(AbstractEventProcessor.class.getDeclaredField("eventHandlerInvoker"), specialProcessor);
 
         assertEquals(sequentialPolicy,
-                     ((SimpleEventHandlerInvoker) defaultInvoker.delegates().get(0)).getSequencingPolicy());
+                     ((SimpleEventHandlerInvoker) defaultInvoker.delegates().getFirst()).getSequencingPolicy());
         assertEquals(fullConcurrencyPolicy,
-                     ((SimpleEventHandlerInvoker) specialInvoker.delegates().get(0)).getSequencingPolicy());
+                     ((SimpleEventHandlerInvoker) specialInvoker.delegates().getFirst()).getSequencingPolicy());
     }
 
     @Test
@@ -381,7 +382,8 @@ class EventProcessingModuleTest {
         Configuration config = configurer.start();
 
         try {
-            config.eventBus().publish(new GenericEventMessage<Object>("test"));
+            config.eventBus()
+                  .publish(new GenericEventMessage<>(new QualifiedName("test", "event", "0.0.1"), "test"));
 
             assertEquals(1, subscribingMonitor.getMessages().size());
             assertTrue(trackingMonitor.await(10, TimeUnit.SECONDS));
@@ -401,7 +403,8 @@ class EventProcessingModuleTest {
         Configuration config = configurer.start();
 
         try {
-            GenericEventMessage<Object> message = new GenericEventMessage<>("test");
+            EventMessage<Object> message =
+                    new GenericEventMessage<>(new QualifiedName("test", "event", "0.0.1"), "test");
             config.eventBus().publish(message);
 
             spanFactory.verifySpanCompleted("EventProcessor.process", message);
@@ -414,7 +417,8 @@ class EventProcessingModuleTest {
 
     @Test
     void configureDefaultListenerInvocationErrorHandler() throws Exception {
-        GenericEventMessage<Boolean> errorThrowingEventMessage = new GenericEventMessage<>(true);
+        EventMessage<Boolean> errorThrowingEventMessage =
+                new GenericEventMessage<>(new QualifiedName("test", "event", "0.0.1"), true);
 
         int expectedListenerInvocationErrorHandlerCalls = 2;
 
@@ -440,7 +444,8 @@ class EventProcessingModuleTest {
 
     @Test
     void configureListenerInvocationErrorHandlerPerEventProcessor() throws Exception {
-        GenericEventMessage<Boolean> errorThrowingEventMessage = new GenericEventMessage<>(true);
+        EventMessage<Boolean> errorThrowingEventMessage =
+                new GenericEventMessage<>(new QualifiedName("test", "event", "0.0.1"), true);
 
         int expectedErrorHandlerCalls = 1;
 
@@ -470,7 +475,8 @@ class EventProcessingModuleTest {
 
     @Test
     void configureDefaultErrorHandler() throws Exception {
-        GenericEventMessage<Integer> failingEventMessage = new GenericEventMessage<>(1000);
+        EventMessage<Integer> failingEventMessage =
+                new GenericEventMessage<>(new QualifiedName("test", "event", "0.0.1"), 1000);
 
         int expectedErrorHandlerCalls = 2;
 
@@ -552,7 +558,8 @@ class EventProcessingModuleTest {
 
     @Test
     void configureErrorHandlerPerEventProcessor() throws Exception {
-        GenericEventMessage<Integer> failingEventMessage = new GenericEventMessage<>(1000);
+        EventMessage<Integer> failingEventMessage =
+                new GenericEventMessage<>(new QualifiedName("test", "event", "0.0.1"), 1000);
 
         int expectedErrorHandlerCalls = 1;
 
@@ -979,7 +986,8 @@ class EventProcessingModuleTest {
         assertEquals(PropagatingErrorHandler.INSTANCE, getField(AbstractEventProcessor.class, "errorHandler", result));
         assertEquals(testTokenStore, getField("tokenStore", result));
         assertEquals(NoTransactionManager.INSTANCE, getField("transactionManager", result));
-        assertEquals(config.getComponent(EventProcessorSpanFactory.class), getField(AbstractEventProcessor.class, "spanFactory", result));
+        assertEquals(config.getComponent(EventProcessorSpanFactory.class),
+                     getField(AbstractEventProcessor.class, "spanFactory", result));
     }
 
     @Test
@@ -1208,7 +1216,7 @@ class EventProcessingModuleTest {
     @Test
     void defaultTransactionManagerIsUsedUponEventProcessorConstruction() throws InterruptedException {
         String testName = "pooled-streaming";
-        GenericEventMessage<Integer> testEvent = new GenericEventMessage<>(1000);
+        EventMessage<Integer> testEvent = new GenericEventMessage<>(new QualifiedName("test", "event", "0.0.1"), 1000);
 
         CountDownLatch transactionCommitted = new CountDownLatch(1);
         TransactionManager defaultTransactionManager = new StubTransactionManager(transactionCommitted);
@@ -1231,7 +1239,7 @@ class EventProcessingModuleTest {
     @Test
     void defaultTransactionManagerIsOverriddenByProcessorSpecificInstance() throws InterruptedException {
         String testName = "pooled-streaming";
-        GenericEventMessage<Integer> testEvent = new GenericEventMessage<>(1000);
+        EventMessage<Integer> testEvent = new GenericEventMessage<>(new QualifiedName("test", "event", "0.0.1"), 1000);
 
         TransactionManager defaultTransactionManager = spy(TransactionManager.class);
         CountDownLatch transactionCommitted = new CountDownLatch(1);
@@ -1292,7 +1300,7 @@ class EventProcessingModuleTest {
         List<EventHandlerInvoker> delegates = getField("delegates", resultMultiInvoker);
         assertFalse(delegates.isEmpty());
         DeadLetteringEventHandlerInvoker resultDeadLetteringInvoker =
-                ((DeadLetteringEventHandlerInvoker) delegates.get(0));
+                ((DeadLetteringEventHandlerInvoker) delegates.getFirst());
 
         assertEquals(deadLetterQueue, getField("queue", resultDeadLetteringInvoker));
         assertEquals(expectedPolicy, getField("enqueuePolicy", resultDeadLetteringInvoker));
@@ -1339,7 +1347,7 @@ class EventProcessingModuleTest {
         List<EventHandlerInvoker> delegates = getField("delegates", resultMultiInvoker);
         assertFalse(delegates.isEmpty());
         DeadLetteringEventHandlerInvoker resultDeadLetteringInvoker =
-                ((DeadLetteringEventHandlerInvoker) delegates.get(0));
+                ((DeadLetteringEventHandlerInvoker) delegates.getFirst());
 
         assertEquals(expectedPolicy, getField("enqueuePolicy", resultDeadLetteringInvoker));
     }
@@ -1387,7 +1395,7 @@ class EventProcessingModuleTest {
         List<EventHandlerInvoker> delegates = getField("delegates", resultMultiInvoker);
         assertFalse(delegates.isEmpty());
         DeadLetteringEventHandlerInvoker resultDeadLetteringInvoker =
-                ((DeadLetteringEventHandlerInvoker) delegates.get(0));
+                ((DeadLetteringEventHandlerInvoker) delegates.getFirst());
 
         assertEquals(expectedPolicy, getField("enqueuePolicy", resultDeadLetteringInvoker));
         assertNotEquals(unexpectedPolicy, getField("enqueuePolicy", resultDeadLetteringInvoker));
@@ -1429,7 +1437,7 @@ class EventProcessingModuleTest {
         List<EventHandlerInvoker> delegates = getField("delegates", resultMultiInvoker);
         assertFalse(delegates.isEmpty());
         DeadLetteringEventHandlerInvoker resultDeadLetteringInvoker =
-                ((DeadLetteringEventHandlerInvoker) delegates.get(0));
+                ((DeadLetteringEventHandlerInvoker) delegates.getFirst());
 
         assertTrue((Boolean) getField("allowReset", resultDeadLetteringInvoker));
     }
@@ -1534,7 +1542,7 @@ class EventProcessingModuleTest {
         List<EventHandlerInvoker> delegates = getField("delegates", resultMultiInvoker);
         assertFalse(delegates.isEmpty());
         DeadLetteringEventHandlerInvoker resultDeadLetteringInvoker =
-                ((DeadLetteringEventHandlerInvoker) delegates.get(0));
+                ((DeadLetteringEventHandlerInvoker) delegates.getFirst());
 
         assertEquals(deadLetterQueue, getField("queue", resultDeadLetteringInvoker));
         assertEquals(expectedPolicy, getField("enqueuePolicy", resultDeadLetteringInvoker));
@@ -1622,7 +1630,7 @@ class EventProcessingModuleTest {
 
         public List<?> getEventHandlers() {
             List<EventHandlerInvoker> invokers = ((MultiEventHandlerInvoker) getEventHandlerInvoker()).delegates();
-            return ((SimpleEventHandlerInvoker) invokers.get(0))
+            return ((SimpleEventHandlerInvoker) invokers.getFirst())
                     .eventHandlers()
                     .stream()
                     .map(eventHandlingComponent -> {
